infra/k8s/ta-expiration-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ta-expiration-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ta-expiration
  template:
    metadata:
      labels:
        app: ta-expiration
    spec:
      containers:
        - name: ta-expiration
          image: rommycy00/ta-expiration
