infra/k8s/ta-ads-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ta-ads-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ta-ads
  template:
    metadata:
      labels:
        app: ta-ads
    spec:
      containers:
        - name: ta-ads
          image: rommycy00/ta-ads
---
apiVersion: v1
kind: Service
metadata:
  name: ta-ads-srv
spec:
  selector:
    app: ta-ads
  ports:
    - name: ta-ads
      protocol: TCP
      port: 3000
      targetPort: 3000
