infra/k8s/ta-auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ta-auth-depl
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ta-auth
  template:
    metadata:
      labels:
        app: ta-auth
    spec:
      containers:
        - name: ta-auth
          image: rommycy00/ta-auth
---
apiVersion: v1
kind: Service
metadata:
  name: ta-auth-srv
spec:
  selector:
    app: ta-auth
  ports:
    - name: ta-auth
      protocol: TCP
      port: 3000
      targetPort: 3000
