infra/k8s/ta-jobs-category.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ta-jobs-category-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ta-jobs-category
  template:
    metadata:
      labels:
        app: ta-jobs-category
    spec:
      containers:
        - name: ta-jobs-category
          image: rommycy00/ta-jobs-category
---
apiVersion: v1
kind: Service
metadata:
  name: ta-jobs-category-srv
spec:
  selector:
    app: ta-jobs-category
  ports:
    - name: ta-jobs-category
      protocol: TCP
      port: 3000
      targetPort: 3000
