infra/k8s/ta-orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ta-orders-depl
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ta-orders
  template:
    metadata:
      labels:
        app: ta-orders
    spec:
      containers:
        - name: ta-orders
          image: rommycy00/ta-orders
---
apiVersion: v1
kind: Service
metadata:
  name: ta-orders-srv
spec:
  selector:
    app: ta-orders
  ports:
    - name: ta-orders
      protocol: TCP
      port: 3000
      targetPort: 3000
