infra/k8s/ta-payments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ta-payments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ta-payments
  template:
    metadata:
      labels:
        app: ta-payments
    spec:
      containers:
        - name: ta-payments
          image: rommycy00/ta-payments
---
apiVersion: v1
kind: Service
metadata:
  name: ta-payments-srv
spec:
  selector:
    app: ta-payments
  ports:
    - name: ta-payments
      protocol: TCP
      port: 3000
      targetPort: 3000
