infra/k8s/ta-rating-review-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ta-rating-review-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ta-rating-review
  template:
    metadata:
      labels:
        app: ta-rating-review
    spec:
      containers:
        - name: ta-rating-review
          image: rommycy00/ta-rating-review
---
apiVersion: v1
kind: Service
metadata:
  name: ta-rating-review-srv
spec:
  selector:
    app: ta-rating-review
  ports:
    - name: ta-rating-review
      protocol: TCP
      port: 3000
      targetPort: 3000
