infra/k8s/ta-search-recommendations-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ta-search-recommendations-depl
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ta-search-recommendations
  template:
    metadata:
      labels:
        app: ta-search-recommendations
    spec:
      containers:
        - name: ta-search-recommendations
          image: rommycy00/ta-search-recommendations
---
apiVersion: v1
kind: Service
metadata:
  name: ta-search-recommendations-srv
spec:
  selector:
    app: ta-search-recommendations
  ports:
    - name: ta-search-recommendations
      protocol: TCP
      port: 3000
      targetPort: 3000
